# covid-vaccine-notifier

./: .envrc.example  pyproject.toml  vaccine-appts.py
