[tool.poetry]
name = "covid-vaccine-notifier"
version = "0.1.0"
description = ""
authors = ["DMA <daniel@martinalarcon.org>"]

[tool.poetry.dependencies]
python = "3.7.6"
numpy = "^1.20.2"
pandas = "^1.2.4"
haversine = "^2.3.0"
prefect = "^0.14.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
